--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: "Josefin Sans", sans-serif;
+}
+
+.color-cell {
+  @apply flex flex-col w-fit bg-white p-3 rounded-lg shadow-2xl text-neutral-500 hover:text-neutral-950 cursor-pointer;
+}
+
+.popup {
+  position: fixed;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, 0);
+  @apply bg-neutral-800 p-3 rounded-3xl px-10 text-neutral-300 w-96;
+}
