--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,11 @@ body {
 }
 
 .color-cell {
-  @apply flex flex-col w-fit bg-white p-3 rounded-lg shadow-2xl text-neutral-500 hover:text-neutral-950 cursor-pointer;
+  @apply flex flex-col w-fit bg-white p-3 rounded-lg shadow-2xl text-neutral-500 hover:text-neutral-950 cursor-pointer hover:rounded-3xl transition-all ease-in-out duration-150;
 }
 
 .popup {
-  position: fixed;
+  position: absolute;
   top: 10%;
   left: 50%;
   transform: translate(-50%, 0);
